[gd_scene load_steps=8 format=3 uid="uid://bw1htv4eyrcfv"]

[ext_resource type="PackedScene" uid="uid://ukr0ndovx342" path="res://Scenes/Projectiles/projectile_template.tscn" id="1_h6w7t"]
[ext_resource type="Script" uid="uid://cp3n7h66c6mhe" path="res://Scenes/Projectiles/fire_ring.gd" id="2_sppn6"]
[ext_resource type="Texture2D" uid="uid://dqu64ti6fhkq7" path="res://Resources/Images/Projectiles/FireAttack.png" id="3_ixw6t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_neklf"]
radius = 128.0

[sub_resource type="AtlasTexture" id="AtlasTexture_b1fe8"]
atlas = ExtResource("3_ixw6t")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7xu5"]
atlas = ExtResource("3_ixw6t")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_lp067"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1fe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7xu5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="FireRing" instance=ExtResource("1_h6w7t")]
script = ExtResource("2_sppn6")
duration = 4.0
dmg_name = "Fire Ring"

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_neklf")

[node name="Sprite2D" parent="." index="1"]
scale = Vector2(2, 2)
offset = Vector2(0, -1)
hframes = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_lp067")
autoplay = "default"
frame_progress = 0.230411

[node name="TickDmg" type="Timer" parent="." index="3"]
wait_time = 0.5
autostart = true

[node name="Lifetime" type="Timer" parent="." index="4"]
wait_time = 4.0
one_shot = true

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="TickDmg" to="." method="_on_tick_dmg_timeout"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
